# ncs

./: .gitignore
app/: CMakeLists.txt  debug.conf  prj.conf
app/ble/: CMakeLists.txt
app/ble/src/: ibeacon.c  nfc_pair.c
app/peripherals/: CMakeLists.txt
app/peripherals/src/: led.c
app/src/: main.c
boards/nordic/nrf5x/: Kconfig.defconfig  Kconfig.nrf5x  board.yml  nrf5x_nrf52840.dts  nrf5x_nrf52840.yaml
